--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" id="container">
         <h1>To-Do List</h1>
         <div class="input">
             <input type="text" id="input" placeholder="Enter your task">
