--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-do list</title>
+    <title>To-do App</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container" id="container">
-        <h1>To-Do List</h1>
+        <h1>To-Do App</h1>
         <div class="input">
             <input type="text" id="input" placeholder="Enter your task">
             <button id="add">Add</button>
